prod/otel-agent-service.prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-agent-opentelemetry-collector
  namespace: observability
  annotations:
    otel.config/version: "v1.0.1"
    otel.config/updated: "2026-07-04"
spec:
  type: ClusterIP
  internalTrafficPolicy: Local
  selector:
    app.kubernetes.io/instance: otel-agent
    app.kubernetes.io/name: opentelemetry-collector
    component: agent-collector
  ports:
    - name: otlp-grpc
      protocol: TCP
      port: 4317
      targetPort: 4317
    - name: otlp-http
      protocol: TCP
      port: 4318
      targetPort: 4318
