prod/otel-gateway-headless.prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-gateway-opentelemetry-collector-headless
  namespace: observability
  annotations:
    otel.config/version: "v1.0.4"
    otel.config/updated: "2026-07-05"
  labels:
    app.kubernetes.io/name: opentelemetry-collector
    app.kubernetes.io/instance: otel-gateway
    app.kubernetes.io/component: standalone-collector
spec:
  clusterIP: None
  publishNotReadyAddresses: false
  selector:
    app.kubernetes.io/name: opentelemetry-collector
    app.kubernetes.io/instance: otel-gateway
    component: standalone-collector
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
      protocol: TCP
      appProtocol: grpc
